wiki/mediawiki-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
  name: mediawiki
  namespace: jamboree21
spec:
  rules:
    - host: wiki.internal.jamboree.se.webservices.scouterna.net
    http:
      paths:
      - backend:
          serviceName: parsoid
          servicePort: 8000
        path: /parsoid
      - backend:
          serviceName: mediawiki
          servicePort: 80
        path: /
  tls:
  - hosts:
    - wiki.internal.jamboree.se.webservices.scouterna.net
    secretName: wiki-internal-jamboree-se-webservices-scouterna-net
